# shell-functools

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
commands/: command.py  filter  fttypes.py  functions.py  map  test_command.py
ft/: filter  foldl  foldl1  ft-functions  list-commands  map  max  sort_by  sort_by_key  take_while
ft/ft/: command.py  error.py  functions.py  internal.py  termcolor.py  test_command.py  types.py
ft/ft/commands/: filter.py  foldl.py  foldl1.py  ft_functions.py  map.py  max.py  sort_by.py  sort_by_key.py  take_while.py
ft/tests/: mock_command.py  test_filter.py  test_foldl1.py  test_function.py  test_map.py  test_sort_by.py  test_take_while.py
